[gd_scene load_steps=17 format=2]

[ext_resource path="res://src/Hurtbox/Hurtbox.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/box.png" type="Texture" id=2]
[ext_resource path="res://assets/flame_base_100-75hp.png" type="Texture" id=3]
[ext_resource path="res://assets/fame_core_100-75hp.png" type="Texture" id=4]
[ext_resource path="res://src/Burnable/Burnable.gd" type="Script" id=5]

[sub_resource type="CanvasItemMaterial" id=4]
light_mode = 1
particles_animation = true
particles_anim_h_frames = 4
particles_anim_v_frames = 1
particles_anim_loop = true

[sub_resource type="Curve" id=5]
_data = [ Vector2( 0, 0 ), 0.0, 0.0, 0, 0, Vector2( 0.0790191, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=6]
curve = SubResource( 5 )

[sub_resource type="ParticlesMaterial" id=7]
lifetime_randomness = 0.2
emission_shape = 1
emission_sphere_radius = 0.5
flag_disable_z = true
direction = Vector3( 0, -1, 0 )
spread = 0.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 2.2
initial_velocity_random = 0.1
angular_velocity = 25.0
angular_velocity_random = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = 0.2
linear_accel_random = 1.0
scale_random = 0.8
scale_curve = SubResource( 6 )
color = Color( 0.862745, 0.447059, 0.101961, 1 )
anim_speed = 0.2
anim_offset = 1.0
anim_offset_random = 1.0

[sub_resource type="CanvasItemMaterial" id=8]
particles_animation = true
particles_anim_h_frames = 4
particles_anim_v_frames = 1
particles_anim_loop = true

[sub_resource type="Curve" id=9]
_data = [ Vector2( 0, 0 ), 0.0, 0.0, 0, 0, Vector2( 0.0790191, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=10]
curve = SubResource( 9 )

[sub_resource type="ParticlesMaterial" id=11]
lifetime_randomness = 0.01
emission_shape = 1
emission_sphere_radius = 0.05
flag_disable_z = true
direction = Vector3( 0, -1, 0 )
spread = 0.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 0.5
initial_velocity_random = 0.1
angular_velocity = 0.5
angular_velocity_random = 0.2
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = 0.1
linear_accel_random = 1.0
scale_random = 0.8
scale_curve = SubResource( 10 )
color = Color( 0.980392, 0.666667, 0, 1 )
anim_speed = 1.0
anim_offset = 1.0
anim_offset_random = 1.0

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 8 )

[sub_resource type="RectangleShape2D" id=2]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 8, 8 )

[node name="BurnableBox" type="KinematicBody2D"]
collision_layer = 520
collision_mask = 515
script = ExtResource( 5 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="ParticlesBase" type="Particles2D" parent="."]
material = SubResource( 4 )
position = Vector2( 0, -3 )
emitting = false
amount = 2
lifetime = 0.5
randomness = 1.0
fixed_fps = 24
local_coords = false
process_material = SubResource( 7 )
texture = ExtResource( 3 )

[node name="PartcilesCore" type="Particles2D" parent="."]
material = SubResource( 8 )
position = Vector2( 0, -2 )
emitting = false
amount = 2
lifetime = 0.5
randomness = 0.8
fixed_fps = 24
local_coords = false
process_material = SubResource( 11 )
texture = ExtResource( 4 )

[node name="Collider" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="SpreadArea" type="Area2D" parent="."]
collision_layer = 512
collision_mask = 512

[node name="Collider" type="CollisionShape2D" parent="SpreadArea"]
shape = SubResource( 2 )

[node name="BurnoutTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="PropagationTimer" type="Timer" parent="."]
one_shot = true

[node name="Hurtbox" parent="." instance=ExtResource( 1 )]
collision_layer = 8

[node name="Collider" parent="Hurtbox" index="0"]
shape = SubResource( 3 )

[connection signal="area_entered" from="SpreadArea" to="." method="_on_SpreadArea_area_entered"]
[connection signal="timeout" from="BurnoutTimer" to="." method="_on_BurnTimer_timeout"]
[connection signal="timeout" from="PropagationTimer" to="." method="_on_PropagationTimer_timeout"]
[connection signal="hit" from="Hurtbox" to="." method="_on_Hurtbox_hit"]

[editable path="Hurtbox"]
